--- a/QSVM_implementation.ipynb
+++ b/QSVM_implementation.ipynb
@@ -4,10 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "gXc2ozA6lW90"
-      ],
-      "authorship_tag": "ABX9TyM6NHhFC4MR9gbXSbzaaBIz",
+      "authorship_tag": "ABX9TyPkC7QtWk6rr5K2Jjj+DaDB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,13 +211,18 @@
         "\n",
         "\n",
         "from qiskit_machine_learning.datasets import ad_hoc_data\n",
-        "from qiskit.utils import algorithm_globals                                             #Using the same qiskit seed for cheking results\n",
+        "\n",
+        "#Using the same qiskit seed for cheking results\n",
+        "from qiskit.utils import algorithm_globals\n",
         "algorithm_globals.random_seed = 12345\n",
         "\n",
-        "adhoc_dimension = 2                                                                    #define the dataset dimension\n",
+        "#define the dataset dimension\n",
+        "adhoc_dimension = 2\n",
         "train_features, train_labels, test_features, test_labels, adhoc_total = ad_hoc_data(\n",
-        "    training_size=20,                                                                  #define  our train subset dimension\n",
-        "    test_size=5,                                                                       #and define test subset dimension\n",
+        "    #define  our train subset dimension\n",
+        "    training_size=20,\n",
+        "    #Define test subset dimension\n",
+        "    test_size=5,\n",
         "    n=adhoc_dimension,\n",
         "    gap=0.3,\n",
         "    plot_data=False,\n",
@@ -235,11 +237,12 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
-        "\n",
-        "def plot_features(ax, features, labels, class_label, marker, face, edge, label):         # A train plot\n",
-        "    ax.scatter(                                                                          # x coordinate of labels where class is class_label\n",
-        "\n",
-        "        features[np.where(labels[:] == class_label), 0],                                 # y coordinate of labels where class is class_label\n",
+        "# A train plot\n",
+        "def plot_features(ax, features, labels, class_label, marker, face, edge, label):\n",
+        "    ax.scatter(\n",
+        "        # x coordinate of labels where class is class_label\n",
+        "        # y coordinate of labels where class is class_label\n",
+        "        features[np.where(labels[:] == class_label), 0],\n",
         "        features[np.where(labels[:] == class_label), 1],\n",
         "        marker=marker,\n",
         "        facecolors=face,\n",
@@ -248,9 +251,11 @@
         "    )\n",
         "\n",
         "\n",
-        "def plot_dataset(train_features, train_labels, test_features, test_labels, adhoc_total):    # a function for plotting the dataset points\n",
+        "# a function for plotting the dataset points\n",
         "\n",
-        "    plt.figure(figsize=(5, 5))                                                              # defining plot size\n",
+        "def plot_dataset(train_features, train_labels, test_features, test_labels, adhoc_total):\n",
+        "  # defining plot size\n",
+        "    plt.figure(figsize=(5, 5))\n",
         "    plt.ylim(0, 2 * np.pi)\n",
         "    plt.xlim(0, 2 * np.pi)\n",
         "    plt.imshow(\n",
