--- a/mnist/mnist.ipynb
+++ b/mnist/mnist.ipynb
@@ -471,6 +471,108 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Classical Comparison\n",
+        "\n",
+        "Here we implement a shallow Neural Network, as a deep convolutional net would be an unfair comparison. We implement the closest net to the one specified on the paper. Citing Section 3.3:\n",
+        ">As a preliminary step we present the labeled samples to a classical neural network. Here we run a (Matlab) classifier with one internal layer consisting of 10 neurons. Each neuron has 16 coefficient weights and one bias weight so there are 170 parameters on the internal layer and 4 on the output layer."
+      ],
+      "metadata": {
+        "id": "zRVs4stmOv31"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
+        "class NeuralNetwork():\n",
+        "\n",
+        "    def __init__(self, input_shape=(16,)):\n",
+        "        self.model = MLPClassifier(hidden_layer_sizes=(10,), activation=\"tanh\", max_iter=200)\n",
+        "\n",
+        "    def train(self, x_train, y_train):\n",
+        "        self.model.fit(x_train, y_train)\n",
+        "\n",
+        "    def predict(self, inputs):\n",
+        "        return self.model.predict(inputs)\n",
+        "\n",
+        "    def score(self, x_test, y_test):\n",
+        "        return self.model.score(x_test, y_test)"
+      ],
+      "metadata": {
+        "id": "3AhXQpG1OKu3"
+      },
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nn = NeuralNetwork()"
+      ],
+      "metadata": {
+        "id": "Tf8yy0QVOX9L"
+      },
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nn.train(X_train, Y_train)"
+      ],
+      "metadata": {
+        "id": "cp90_VIiObPc"
+      },
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nn.score(X_test, Y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r3tpGffkOigr",
+        "outputId": "514ed89a-7060-4252-e2c1-70116f67412d"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9207317073170732"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 117
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Comments and conclusion\n",
+        "\n",
+        "Here we have implemented a vanilla variational circuit akin to the shallow nets used as a baseline for classical machine learning. The difficult part was implementing the same model trice, in different frameworks, as quantum simulation is costly.\n",
+        "\n",
+        "Another difficulty was to somehow understand the maths behind all the argumentss made in the paper, as the implementation is quite doable after one understand the mathematics deeply.\n",
+        "\n",
+        "In the future, we intend to implement many models, and introduce state-of-the-art techniques such as parameter shift.\n",
+        "\n",
+        "Thanks for reading!"
+      ],
+      "metadata": {
+        "id": "D9mejlXIPQHm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## References\n",
         "\n",
         "1. https://www.tensorflow.org/quantum/tutorials/mnist\n",
