Circuit-centric VC with comments

--- a/qmc/circuit_centric_classifier/variational_classifier.ipynb
+++ b/qmc/circuit_centric_classifier/variational_classifier.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Circuit-centric quantum classifier\n",
+    "Sebastian Molina [smolinad@unal.edu.co](mailto:smolinad@unal.edu.co)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following notebook shows the results of the variational classifier proposed in 'Circuit-centric quantum classifiers' by Schuld, et al (2018). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,11 +49,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Amplitude encoding\n",
+    "In order to use this circuit efficiently, as proposed in the paper, one should encode data with amplitude encoding. The implementation of amplitude encoding was taken from [here](https://tensorcircuit.readthedocs.io/en/latest/tutorials/qml_scenarios.html?highlight=mnist)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NOTE: Change to the dataset used in Farhi implementation. This was done by the means of testing. \n",
     "(x_train, y_train), (x_test, y_test) = tc.templates.dataset.mnist_pair_data(\n",
     "    3, 6, loader=None\n",
     ")"
@@ -46,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +95,17 @@
    "source": [
     "x_train_q = batched_ae(x_train, 10)\n",
     "x_test_q = batched_ae(x_test, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variational classifier\n",
+    "\n",
+    "The variational classifier receives a `rangeList`, which corresponds of the range of controlled gates.\n",
+    "\n",
+    "![Variational Classifier](vc.png)"
    ]
   },
   {
